create style.css, link index.html to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <head>
+	<link href="style.css" ref="stylesheet">
 </head>
 <body>
 	<header>
-		<h1></h1>
+		<h1>All About Me</h1>
 	</header>
 </body>
