add img to header, img styled

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 </head>
 <body>
 	<header>
+		<img src="about_me.jpg">
 		<h1>All About Me</h1>
+		<p>Josh Andrews</p>
 	</header>
+
+
+	<div>
+	</div>
 </body>
