whoops, had ref instead of rel

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <head>
-	<link href="style.css" ref="stylesheet">
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -11,5 +11,6 @@
 
 
 	<div>
+		<p>Where to begin..</p>
 	</div>
 </body>
