--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<header>
-		<img src="/assets/about_me.jpg">
+		<img src="assets/about_me.JPG">
 		<h1>All About Me</h1>
 		<p>Josh Andrews</p>
 	</header>
