i broke my carousel, probably because i'm falling asleep

--- a/index.html
+++ b/index.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <head>
+	<title>About Me | Josh</title>
 	<link href="style.css" rel="stylesheet">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	    <script>
+         // Activates the Carousel
+         $('.carousel').carousel({
+                interval: 2000
+         })
+    </script>
 </head>
 <body>
 	<header>
-		<img src="assets/about_me.JPG">
+		<img src="assets/crazy_star.jpg">
 		<h1>All About Me</h1>
 		<p>Josh Andrews</p>
 	</header>
 
-
+	<article>
+		<h3>I'd Like to Introduce Myself</h3>
+		<p>I was born and raised in a suburban town 15 minutes north of Pittsburgh. I grew up playing sports, bleeding Black & Gold and, and surrounded by technology.  I can still remember playing my dad's original Nintendo and experimenting with our Gateway computer almost 20 years ago.</p>
+		<p>In the Summer of 2013, I became enamored with the startup world, entrepreneurial opportunity, and innovation in general. My friend recommended I read "The Lean Startup" by Eric Reis, and it was one of the better decisions I've ever made.  I was extremely passionate about the process, and started looking at problems in a new light. Taking a scientific approach to business in order to validate assumptions is a valuable tool. In short, this led me to Ruby on Rails, and eventually to GA.</p>
+	</article>
 	<div>
-		<p>Where to begin..</p>
+		<img src="assets/about_me.JPG">
 	</div>
+	<article>
+		<h3>Self-Teaching Programming & Web Development</h3>
+		<p>I started building "slightly dynamic"(or "mostly static") websites using the Rails framework as a guide. I learned a ton, but was freelancing nearly the entire time. I used Twitter Bootstrap in almost all of my projects, and so my learning progressed furthest on the front-end of things.  HTML5 & CSS3 are largely similar, but Bootstrap has a number of advantages over vanilla HTML.</p>
+	</article>
+
+
+
+	<div class="pitbulls">
+		<p><small>My kids, Layla & Seamus <br />Best Dogs in the World</small></p>
+	</div>
+
 </body>
