star img float right to satisfy top right picture placement

--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 </head>
 <body>
 	<header>
-		<img src="assets/crazy_star.jpg">
+		<div class="star">
+			<img src="assets/crazy_star.jpg">
+		</div>
+	</header>
+
 		<h1>All About Me</h1>
 		<p>Josh Andrews</p>
-	</header>
 
 	<article>
 		<h3>I'd Like to Introduce Myself</h3>
 		<p>I was born and raised in a suburban town 15 minutes north of Pittsburgh. I grew up playing sports, bleeding Black & Gold and, and surrounded by technology.  I can still remember playing my dad's original Nintendo and experimenting with our Gateway computer almost 20 years ago.</p>
 		<p>In the Summer of 2013, I became enamored with the startup world, entrepreneurial opportunity, and innovation in general. My friend recommended I read "The Lean Startup" by Eric Reis, and it was one of the better decisions I've ever made.  I was extremely passionate about the process, and started looking at problems in a new light. Taking a scientific approach to business in order to validate assumptions is a valuable tool. In short, this led me to Ruby on Rails, and eventually to GA.</p>
 	</article>
-	<div>
+	<div class="me">
 		<img src="assets/about_me.JPG">
 	</div>
 	<article>
